--- a/main.css
+++ b/main.css
@@ -125,27 +125,37 @@ body {
     font-family:"bebas+neue";
 }
 
-.formulario-contacto {
-    padding-top: 70px;
+.container h2 {
     text-align: center;
-    font-family:"montserrat";
-}
-
-.formulario-contacto h2 {
-    padding-bottom: 40px;
+    padding-top: 80px;
+    padding-bottom: 30px;
     font-family:"bebas+neue";
 }
 
-.formulario-contacto h4 {
-    padding-bottom: 20px;
-    font-family:"montserrat";
+.container h4 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family:"bebas+neue";
+}
+
+.form-label {
+    font-family:"bebas+neue";
+}
+
+.form-control {
+    font-family:"bebas+neue";
+}
+
+.col mb-3 {
+    padding: 0px 50px;
 }
 
 .footer {
     width: 100%;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
-    padding-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     background-color: black;
     color: white;
     font-family:"montserrat";
@@ -236,6 +246,25 @@ body {
         color: white;
         font-family:"montserrat";
         font-size: small;
+    }
+
+    .footer {
+        width: 100%;
+        grid-template-columns: repeat(3, 1fr);
+        text-align: center;
+        padding-top: 20px;
+        padding-bottom: 10px;
+        background-color: black;
+        color: white;
+        font-family:"montserrat";
+        font-size: 20px;
+    }
+
+    .footer a {
+        text-decoration: none;
+        color: white;
+        font-family:"montserrat";
+        font-size: 15px;
     }
 
 }
