--- a/scss/main.scss
+++ b/scss/main.scss
@@ -97,10 +97,10 @@ body {
     padding-top: 50px;
 }
 
-.galeria-de-fotos {
+.galeria-de-fotos h2 {
     text-align: center;
     padding-top: 80px;
-    padding-bottom: 80px;
+    padding-bottom: 50px;
     font-family:"bebas+neue";
 }
 
