--- a/css/main.css
+++ b/css/main.css
@@ -78,10 +78,10 @@ body {
   width: 100%;
   padding-top: 50px; }
 
-.galeria-de-fotos {
+.galeria-de-fotos h2 {
   text-align: center;
   padding-top: 80px;
-  padding-bottom: 80px;
+  padding-bottom: 50px;
   font-family: "bebas+neue"; }
 
 .container h2 {
