--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,255 +1,7 @@
-$fuente-h2: "montserrat";
-
-* {
-    padding: 0%;
-    margin: 0%;
-}
-
-body {
-    width: 100%;
-    height: 100%;
-}
-
-.grid {
-    display: grid;
-    overflow: hidden;
-}
-
-.container-fluid {
-    font-family: "montserrat";
-}
-
-.portada-imagen {
-    width: 100%;
-    height: 50%;
-    margin-bottom: 60px;
-}
-
-.nosotros {
-    width: 100%;
-    align-items: center;
-    text-align: center;
-}
-
-.nosotros h2 {
-    margin-bottom: 10px;
-    font-family:"bebas+neue";
-}
-
-.qstexto {
-    padding-bottom: 50px;
-    text-align: center;
-    font-family:"montserrat";
-    
-}
-
-.portada-9 {
-    width: 50%;
-}
-
-.eventos {
-    width: 100%;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 50px;
-}
-
-.sociales {
-    width: 100%;
-}
-
-.sociales h2 {
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 20px;
-    font-family:"bebas+neue";
-}
-
-.sociales p {
-    text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
-    font-family:"montserrat";
-}
-
-.img-social {
-    width: 100%;
-    padding-top: 50px;
-}
-
-.corporativo {
-    width: 100%;
-}
-
-.corporativo h2 {
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 20px;
-    font-family:"bebas+neue";
-}
-
-.corporativo p {
-    text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
-    font-family:"montserrat";
-}
-
-.img-corpo {
-    width: 100%;
-    padding-top: 50px;
-}
-
-.galeria-de-fotos h2 {
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 50px;
-    font-family:"bebas+neue";
-}
-
-.container h2 {
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 50px;
-    font-family:"bebas+neue";
-}
-
-.container h4 {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    font-family:"bebas+neue";
-}
-
-.form-label {
-    font-family:"montserrat";
-}
-
-.form-control {
-    font-family:"montserrat";
-}
-
-.col mb-3 {
-    padding: 0px 50px;
-}
-
-.footer {
-    width: 100%;
-    grid-template-columns: repeat(3, 1fr);
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    background-color: black;
-    color: white;
-    font-family:"montserrat";
-}
-
-.footer a {
-    text-decoration: none;
-    color: white;
-    font-family:"montserrat";
-}
-
-@media screen and (max-width: 768px) {
-    
-    .navbar-collapse {
-        text-align: end;
-        font-size: 13px;
-        font-family: "montserrat";
-    }
-
-
-    .qstexto {
-        padding-bottom: 50px;
-        text-align: center;
-        justify-items: center;
-        font-size: small;
-        font-family:"montserrat";
-    }
-
-    .portada-9 {
-        width: 70%;
-    }
-
-    .eventos {
-        width: 100%;
-        grid-template-columns: repeat(1, 1fr);
-        grid-column-gap: 50px;
-    }
-
-    .sociales h2 {
-        text-align: center;
-        padding-top: 80px;
-        padding-bottom: 20px;
-        font-size: small;
-        font-family:"bebas+neue";
-    }
-    
-    .sociales p {
-        text-align: center;
-        padding-left: 50px;
-        padding-right: 50px;
-        font-size: small;
-        font-family:"montserrat";
-    }
-    
-    .img-social {
-        width: 100%;
-        padding-top: 50px;
-    }
-    
-    .corporativo h2 {
-        text-align: center;
-        padding-top: 80px;
-        padding-bottom: 20px;
-        font-size: small;
-        font-family:"bebas+neue";
-    }
-    
-    .corporativo p {
-        text-align: center;
-        padding-left: 50px;
-        padding-right: 50px;
-        font-size: small;
-        font-family:"montserrat";
-    }
-    
-    .img-corpo {
-        width: 100%;
-        padding-top: 50px;
-    }
-
-    .footer {
-        width: 100%;
-        grid-template-columns: repeat(3, 1fr);
-        text-align: center;
-        padding-top: 20px;
-        padding-bottom: 10px;
-        background-color: black;
-        color: white;
-        font-family:"montserrat";
-        font-size: 10px;
-    }
-
-    .footer a {
-        text-decoration: none;
-        color: white;
-        font-family:"montserrat";
-        font-size: 12px;
-    }
-
-    .form-label {
-        font-family:"montserrat";
-        font-size: 13px;
-    }
-    
-    .form-control {
-        font-family:"montserrat";
-    }
-
-    .container h4 {
-        padding-top: 30px;
-        padding-bottom: 30px;
-        font-family:"bebas+neue";
-        font-size: 15px;
-    }
-
-}
+@import "body";
+@import "nosotros";
+@import "eventos";
+@import "galeria";
+@import "contacto";
+@import "footer";
+@import "mediaqueries";
