--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body {
   padding-right: 50px;
   font-family: "montserrat"; }
 
-.img-social {
+.img-social, .img-corpo {
   width: 100%;
   padding-top: 50px; }
 
@@ -74,10 +74,6 @@ body {
   padding-right: 50px;
   font-family: "montserrat"; }
 
-.img-corpo {
-  width: 100%;
-  padding-top: 50px; }
-
 .galeria-de-fotos h2 {
   text-align: center;
   padding-top: 80px;
@@ -87,8 +83,7 @@ body {
 .container h2 {
   text-align: center;
   padding-top: 80px;
-  padding-bottom: 50px;
-  font-family: "bebas+neue"; }
+  padding-bottom: 50px; }
 
 .container h4 {
   padding-top: 30px;
@@ -148,7 +143,7 @@ body {
     padding-right: 50px;
     font-size: small;
     font-family: "montserrat"; }
-  .img-social {
+  .img-social, .img-corpo {
     width: 100%;
     padding-top: 50px; }
   .corporativo h2 {
