--- a/scss/_eventos.scss
+++ b/scss/_eventos.scss
@@ -1,3 +1,10 @@
+@mixin fontBeba {
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 20px;
+    font-family:"bebas+neue";
+}
+
 .eventos {
     width: 100%;
     grid-template-columns: repeat(2, 1fr);
@@ -9,10 +16,7 @@
 }
 
 .sociales h2 {
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 20px;
-    font-family:"bebas+neue";
+    @include fontBeba();
 }
 
 .sociales p {
@@ -32,10 +36,7 @@
 }
 
 .corporativo h2 {
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 20px;
-    font-family:"bebas+neue";
+    @include fontBeba();
 }
 
 .corporativo p {
@@ -46,6 +47,5 @@
 }
 
 .img-corpo {
-    width: 100%;
-    padding-top: 50px;
+    @extend .img-social;
 }
